# internal/adapters/in/http/dto.go
@@ -1,0 +1,17 @@
+package http
+
+// AuthResponse представляет ответ с токенами авторизации
+type AuthResponse struct {
+	User         UserResponse `json:"user"`
+	AccessToken  string       `json:"access_token"`
+	RefreshToken string       `json:"refresh_token"`
+	TokenType    string       `json:"token_type"`
+	ExpiresIn    int64        `json:"expires_in"`
+}
+
+// UserResponse представляет информацию о пользователе в ответе
+type UserResponse struct {
+	ID    string `json:"id"`
+	Email string `json:"email"`
+	Name  string `json:"name"`
+}
